--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ p {
     flex-direction: row-reverse;
     width: 1200px;
     margin: 0 auto;
-    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1); */
 }
 
 .main-content {
